@@ -622,7 +622,7 @@ session js_session_primary(udata user) {
             top = cur;
 
     /* return it if it's active */
-    if(top->priority >= 0)
+    if(top->priority >= -128)
         return top;
 
     /* otherwise there's no active session */
